src/features/layout/Typography/Typography.module.scss
@import '../../../styles/theme';

.root {
  color: $theme-text-color;
  font-family: $theme-font-family;
}

.variant-h1 {
  @extend %theme-h1;
}

.variant-h2 {
  @extend %theme-h2;
}

.variant-h3 {
  @extend %theme-h3;
}

.variant-p {
  @extend %theme-p;
}

.variant-hr {
  @extend %theme-hr;
}

.variant-prose {
  font-size: $theme-font-size-md;
  line-height: 1.8;

  > :first-child:not(hr) {
    margin-top: 0;
  }

  a {
    @extend %theme-link;
  }

  h1 {
    @extend %theme-h1;
  }

  h2 {
    @extend %theme-h2;
  }

  h3 {
    @extend %theme-h3;
  }

  p {
    @extend .variant-p;
  }

  hr {
    @extend %theme-hr;
  }

  ul,
  ol {
    @extend %theme-list;
  }

  ul,
  ol {
    > li {
      @extend %theme-list-item;
    }
  }

  code {
    background-color: #333;
    padding: 1px 4px;
  }

  details {
    summary {
      cursor: pointer;
    }
  }

  pre {
    @include scrollbar;
    @include spacing;

    code {
      background-color: transparent;
      border-width: 0;
      border-radius: 0;
      padding: 0;
      font-weight: 400;
      color: inherit;
    }
  }

  pre[class*='language-'],
  code[class*='language-'] {
    font-size: $theme-font-size-base;
    cursor: text;
  }

  pre[class*='language-'] {
    border-color: #333;
    border-width: 1px;
    border-style: solid;
    padding: $theme-spacing-md;
    background: rgb(26, 26, 26);
    transition-property: border-color;
    transition-duration: 260ms;
    &:hover {
      border-color: #444;
    }
  }

  img {
    display: block;
    height: auto;
    max-width: 100%;
  }
}

